feature: create entity user, repository user and controller use
